<resources>
    <string name="app_name">Individual assignment</string>

    <string name="user">User</string>
    <string name="admin">Admin</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="name">Name</string>
    <string name="feedback">Feedback</string>
    <string name="delete">Delete</string>

    <string name="submit">Submit</string>

    <string name="feedbackSuccessful">Feedback has been submitted</string>

    <string name="errorLogin">Email or Password are incorrect, please try again</string>
</resources>
